[package]
name = "sentinel_ultimate"
version = "1.0.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_Debug"
] }
ntapi = "0.4"
